# newman

./: .env.example  .gitignore  README.md  environment.yml  newman.yaml
backend/: __init__.py  pyproject.toml
backend/api/: app.py  errors.py
backend/attachments/: __init__.py  models.py  parser.py  service.py
backend/channels/: README.md  __init__.py  base.py  feishu.py  message_converter.py  service.py  session_store.py  wecom.py
backend/config/: defaults.yaml  loader.py  models.yaml  schema.py
backend/evolution/: __init__.py  models.py  prompts.py  service.py  store.py
backend/hooks/: __init__.py  hook_manager.py
backend/mcp/: __init__.py  client.py  config.py  models.py  path_guard.py  registry.py  resource_adapter.py  tool_adapter.py
backend/memory/: checkpoint_store.py  compressor.py  memory_extract.py  stable_context.py
backend/newman_backend.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
backend/plugin_runtime/: README.md  __init__.py  models.py  plugin_loader.py  plugin_registry.py  service.py  skill_loader.py  skill_parser.py
backend/providers/: anthropic_compatible.py  base.py  factory.py  multimodal.py  openai_compatible.py  token_estimator.py
backend/rag/: README.md  chunker.py  citation.py  embedder.py  models.py  parser.py  reranker.py  retriever.py  service.py  store.py
backend/runtime/: collaboration_mode.py  environment_context.py  error_classifier.py  error_codes.py  feedback_writer.py  message_rendering.py  output_paths.py  prompt_assembler.py  result_normalizer.py  retry_policy.py  run_loop.py  session_task.py  thinking_parser.py  thread_manager.py  turn_completion.py  workflow_state.py
backend/sandbox/: Dockerfile  __init__.py  docker_sandbox.py  linux_bwrap.py  native_sandbox.py  resource_limits.py  workspace_mount.py
backend/scheduler/: __init__.py  alert_store.py  cron_parser.py  models.py  run_store.py  scheduler_engine.py  task_store.py
backend/sessions/: models.py  session_store.py
backend/skill_runtime/: README.md  __init__.py  registry.py
backend/tests/: test_api_contracts.py  test_compressor.py  test_config_loader.py  test_evolution.py  test_google_search_tool.py  test_mcp_registry.py  (+22 more)
(+170 files in other folders)
