[project]
name = "newman-backend"
version = "0.1.0"
description = "Newman backend Phase 1 scaffold"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115.0",
  "httpx>=0.27.0",
  "jinja2>=3.1.4",
  "pydantic>=2.8.0",
  "pydantic-settings>=2.3.0",
  "pyyaml>=6.0.2",
  "uvicorn>=0.30.0",
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = [
  "backend",
  "backend.api",
  "backend.api.middleware",
  "backend.api.routes",
  "backend.api.sse",
  "backend.channels",
  "backend.config",
  "backend.hooks",
  "backend.memory",
  "backend.mcp",
  "backend.plugin_runtime",
  "backend.providers",
  "backend.scheduler",
  "backend.skill_runtime",
  "backend.runtime",
  "backend.sandbox",
  "backend.sessions",
  "backend.tools",
  "backend.tools.impl",
]
