[project]
name = "newman-backend"
version = "0.1.0"
description = "Newman backend Phase 1 scaffold"
requires-python = ">=3.11"
dependencies = [
  "chromadb>=1.5.0",
  "fastapi>=0.115.0",
  "httpx>=0.27.0",
  "jinja2>=3.1.4",
  "openpyxl>=3.1.5",
  "pdfplumber>=0.11.0",
  "psycopg[binary]>=3.2.0",
  "pymupdf>=1.27.0",
  "python-multipart>=0.0.9",
  "python-docx>=1.1.2",
  "python-pptx>=1.0.2",
  "pydantic>=2.8.0",
  "pydantic-settings>=2.3.0",
  "pypdf>=5.4.0",
  "pyyaml>=6.0.2",
  "rank-bm25>=0.2.2",
  "serpapi>=1.0.2",
  "tiktoken>=0.9.0",
  "uvicorn>=0.30.0",
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = [
  "backend",
  "backend.api",
  "backend.api.middleware",
  "backend.api.routes",
  "backend.api.sse",
  "backend.attachments",
  "backend.channels",
  "backend.config",
  "backend.hooks",
  "backend.memory",
  "backend.mcp",
  "backend.plugin_runtime",
  "backend.providers",
  "backend.rag",
  "backend.scheduler",
  "backend.skill_runtime",
  "backend.runtime",
  "backend.sandbox",
  "backend.sessions",
  "backend.tools",
  "backend.tools.impl",
]

[tool.setuptools.package-dir]
backend = "."
